# rust-fsharp-lab

./: .gitignore  README.md
.github/workflows/: build.yaml
fsharp/: Program.fs  README.md  fsharp.fsproj  packages.lock.json  packages.lock.osx-x64.json
fsharp/.config/: dotnet-tools.json
rust/: .env  Cargo.toml  README.md  docker-compose.yaml
rust/.sqlx/: query-53bb2147cf7571010a4f3d036153c5f9e9cde56a377aef5104da91f8e5326193.json  query-76362b2aa21fe8a3add00ef8dd86fa186b5e7eefb382b638fee2287a9062a410.json  query-bc0d3d784f556beff300bff45573da59ca531867c240d35dc241011a0f9657ef.json
rust/migrations/: 20240928140725_table.sql
rust/openapi/: openapi.json
rust/rust_exe/: Cargo.toml
rust/rust_exe/src/: main.rs
rust/sqlx_lib/: Cargo.toml
rust/sqlx_lib/src/: env_var_helper.rs  error.rs  lib.rs  queries.rs  tables.rs
rust/webserver/: Cargo.toml
rust/webserver/src/: main.rs
