[package]
name = "sqlx_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono" ] }
tokio = { version = "1.40.0", features = [ "rt-multi-thread", "macros"] }
serde_json = { version = "1.0", features = ["raw_value"] }
dotenvy = "0.15"
cxx = "1.0.128"

[build-dependencies]
cxx-build = "1.0"

[lib]
# Create a staticlib for C++ consumption and rlib for Rust consumption
crate-type = ["staticlib", "rlib"]